--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,16 @@ header>div {
 
 /* start main */
 body {
-    background-color: rgb(9, 202, 83);
+    background-color: #23b312;
 }
 
 .cell {
-    border: 2px solid #fff
+    border: 2px solid #fff;
+    color: #fff;
+}
+
+.cell.clicked {
+    background-color: #00f;
 }
 
 /* scelgo le dimensioni del perimetro tenendo presente dell'eventualità di dover affrontare il bonus, per cui divisibile per 7,9,10 */
