--- a/css/style.css
+++ b/css/style.css
@@ -72,4 +72,7 @@ body {
 .cell {
     width: calc(100% / 10);
     height: calc(100% / 10);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
