fixed-print-any-click-on-console-the-number-of-the-cell

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body {
 
 .cell.clicked {
     background-color: #00f;
+    cursor: not-allowed;
 }
 
 /* scelgo le dimensioni del perimetro tenendo presente dell'eventualità di dover affrontare il bonus, per cui divisibile per 7,9,10 */
@@ -72,6 +73,9 @@ body {
 .cell {
     width: calc(100% / 10);
     height: calc(100% / 10);
+
+    cursor: pointer;
+
     display: flex;
     justify-content: center;
     align-items: center;
