--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,6 @@
     margin: 0 auto;
 }
 
-.d-block {
-    display: block;
-}
-
-.d-none {
-    display: none;
-}
-
 /* header */
 header {
     height: 140px;
@@ -45,8 +37,9 @@ header>div {
 /* end header */
 
 /* start main */
-body {
+main {
     background-color: #23b312;
+    padding-top: 15px;
 }
 
 .cell {
